--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,8 @@
-:root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +108,12 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+*/
+.wrapper{
+  width:100%;
+} 
+.menu{
+  width:100%;
 }
